--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "next": "12.0.7",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^3.0.7",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "eslint": "8.5.0",
