Testing pull/push

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-js-tailwind",
+  "name": "colorado-attractions",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -19,5 +19,7 @@
   "devDependencies": {
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
