--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "autoprefixer": "^10.4.0",
     "next": "12.0.7",
+    "next-themes": "^0.0.15",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.7",
     "yarn": "^1.22.17"
   },
