--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "next-themes": "^0.0.15",
     "postcss": "^8.4.5",
