--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "yarn": "^1.22.17"
   },
   "devDependencies": {
+    "@types/react": "^17.0.38",
     "eslint": "8.5.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.5.4"
   },
   "keywords": [],
   "description": ""
